--- a/_config.yml
+++ b/_config.yml
@@ -6,15 +6,12 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+title: PreFab
+email: ger.w@pm.me
+description: Hello! My name's Ger, and I've been working at Fab Lab Limerick since roughly 2015. I'm a graduate of SAUL (the School of Architecture of the University of Limerick) - the institution where the Fab Lab was eventually established. \n Javier Buron-Garcia (Fab Academy graduate from 2017) initially started the Fab Lab here, with the students taking part in his Digital Fabrication elective. In SAUL electives take place as contiguous blocks in the timetable, allowing such activities as [building our own laser cutter](#), and so on. \n In 2014, Limerick took part in the Irish National City of Culture Programme, and teaching assistant, Michael McLaughlin helped Javier apply for City of Culture funding, from which Fab Lab Limerick spawned. \n At that time, I took part in other City of Culture projects (applications sent from the same kitchen in fact!) allowed me to start my own community co-design studio, called Small Town Studio. At the end of 2015, I left Small Town Studio behind, and started teaching evening courses in the Lab. In 2017, taking on the role of coordinator.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
+twitter_username: notsobadger
 github_username:  jekyll
 
 # Build settings
